Fixed an issue with button alignment in the top warning block.

--- a/Web Site/Ewf/Styles/EwfUi/Layout.css
+++ b/Web Site/Ewf/Styles/EwfUi/Layout.css
@@ -152,9 +152,6 @@ p, ul {
 }
 
 /* corner rounding */
-ewfSectionBoxStyleBothStates, ewfTableStandardAndStandardExceptLayoutStyles, ewfActionControlAllButtonStylesAllStates {
-	overflow: hidden;
-}
 ewfSectionBoxStyleBothStates, ewfTableStandardAndStandardExceptLayoutStyles, ewfActionControlLargeButtonStyleAllStates {
 	border-radius: .5em;
 }
@@ -163,6 +160,9 @@ ewfActionControlShrinkWrapButtonStyleAllStates {
 }
 ewfActionControlNormalButtonStyleAllStates {
 	border-radius: .4em;
+}
+ewfSectionBoxStyleBothStates, ewfTableStandardAndStandardExceptLayoutStyles {
+	overflow: hidden;
 }
 
 /* modal confirmation blocks */
